Update requirements.txt with actual dependencies and add installation guide

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:43a3259a50563d1302a655ac57f0361df610de6af97813b8d745684ea4911908
-size 265
+openai>=1.0.0
+numpy
+tiktoken
+langchain-core
+faiss-cpu
+torch
+transformers
+requests
